--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "chroma-rust"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 description = "A rust crate for working with colors and color spaces."
 license = "MIT"
+authors = ["JiatLn"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
